<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutOrderDetailProduct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/imgOrderProduct"
        android:layout_width="70dp"
        android:layout_height="86dp"
        android:background="@drawable/bg_product_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginStart="14dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtOrderProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/t_n_s_n_ph_m2"
            android:textColor="@color/text_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOrderProductVariant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/size_m_black"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtOrderProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_100_000"
            android:textColor="@color/text_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtOrderProductQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x111"
        android:textColor="@color/text_dark"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>